# adventofcode2022

./: .editorconfig  README.md  main.py  pyproject.toml  test_main.py
solutions/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  __init__.py
