[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Franz B. <franz.buchsbaum@kununu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
